fix: attempt to fix bug that is preventing bootstrap buttons styling from showing on mobile browsers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,7 @@ body {
     width: 80%;
     padding: 2px;
     font-family: "Dongle", sans-serif;
+    color: black;
     font-size: 30px;
     border-radius: 10px;
     border-width: medium;
